--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "---",
+  "name": "Coaching-staff",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
+  "description": "прототип проекта: 'Тренерский состав' приложения на телефоне",
+  "author": {
+    "name": "Albert Taygibov"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -12,6 +16,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "sass": "^1.70.0"
   },
   "devDependencies": {
