added docker for development

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Coaching-staff",
+  "name": "Coaching-staff-frontend",
   "private": true,
   "version": "0.0.1",
   "type": "module",
